--- a/pom.xml
+++ b/pom.xml
@@ -53,15 +53,11 @@
 			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
 			<version>2.6.8</version>
 		</dependency>
-
-
-
-		<!--		<dependency>-->
-<!--			<groupId>org.postgresql</groupId>-->
-<!--			<artifactId>postgresql</artifactId>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
-
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
